--- a/index.html
+++ b/index.html
@@ -148,9 +148,14 @@
       display: flex;
       justify-content: center;
       margin: 1rem 0;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
     .g-recaptcha > div {
+      width: 100% !important;
+      max-width: 400px !important;
       background: rgba(255, 255, 255, 0.05) !important;
       border: 1px solid rgba(255, 255, 255, 0.1) !important;
       border-radius: 0.5rem !important;
@@ -159,6 +164,31 @@
 
     .g-recaptcha iframe {
       filter: invert(1) hue-rotate(180deg) !important;
+      background: transparent !important;
+      width: 100% !important;
+    }
+
+    /* Style the reCAPTCHA checkbox */
+    .g-recaptcha .recaptcha-checkbox {
+      border: 1px solid rgba(255, 255, 255, 0.1) !important;
+      background: rgba(255, 255, 255, 0.05) !important;
+      border-radius: 0.25rem !important;
+    }
+
+    .g-recaptcha .recaptcha-checkbox-checkmark {
+      filter: invert(1) !important;
+    }
+
+    /* Style the reCAPTCHA text */
+    .g-recaptcha .rc-anchor-normal-footer {
+      display: none !important;
+    }
+
+    /* Add hover effect */
+    .g-recaptcha > div:hover {
+      border-color: rgba(255, 255, 255, 0.2) !important;
+      background: rgba(255, 255, 255, 0.08) !important;
+      transition: all 0.3s ease !important;
     }
   </style>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -237,83 +267,6 @@
         <!-- Badge Slider Section - Fixed at bottom -->
         <div class="w-full bg-black/50 backdrop-blur-sm overflow-hidden absolute bottom-0 h-[120px] md:h-[200px]">
           <div class="badge-slider-container">
-            <style>
-              .badge-slider-container {
-                position: relative;
-                width: 100%;
-                padding: 20px 0;
-                overflow: hidden;
-              }
-
-              .badge-track {
-                display: flex;
-                width: fit-content;
-                animation: scroll 40s linear infinite;
-              }
-
-              .badge-track:hover {
-                animation-play-state: paused;
-              }
-
-              .badge-group {
-                display: flex;
-                align-items: center;
-                gap: 30px;
-                padding: 0 20px;
-              }
-
-              .badge-group img {
-                height: 60px;
-                width: auto;
-                object-fit: contain;
-                filter: brightness(1.1);
-              }
-
-              @media (min-width: 768px) {
-                .badge-group {
-                  gap: 60px;
-                  padding: 0 30px;
-                }
-                .badge-group img {
-                  height: 80px;
-                }
-              }
-
-              @media (min-resolution: 2dppx) {
-                .badge-group img {
-                  height: 120px;
-                }
-              }
-
-              @keyframes scroll {
-                0% {
-                  transform: translateX(0);
-                }
-                100% {
-                  transform: translateX(-50%);
-                }
-              }
-
-              .badge-slider-container::before,
-              .badge-slider-container::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                width: 150px;
-                height: 100%;
-                z-index: 2;
-              }
-
-              .badge-slider-container::before {
-                left: 0;
-                background: linear-gradient(to right, rgb(0 0 0 / 0.8), transparent);
-              }
-
-              .badge-slider-container::after {
-                right: 0;
-                background: linear-gradient(to left, rgb(0 0 0 / 0.8), transparent);
-              }
-            </style>
             <div class="badge-track">
               <!-- First set of badges -->
               <div class="badge-group">
@@ -580,7 +533,6 @@
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
               <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_recaptcha" value="6LdsgRgrAAAAAKRZXf4Qr301-h7YIMplwibZloPZ">
               <!-- Anti-bot measures -->
               <div class="hidden">
                 <input type="text" name="website" tabindex="-1" autocomplete="off">
@@ -605,7 +557,7 @@
                 </div>
               </div>
               <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
-              <div class="g-recaptcha" data-sitekey="6LdsgRgrAAAAAKRZXf4Qr301-h7YIMplwibZloPZ" data-theme="dark"></div>
+              <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY" data-theme="dark"></div>
               <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
                 Send Message
               </button>
