--- a/index.html
+++ b/index.html
@@ -527,17 +527,10 @@
           <div class="max-w-3xl mx-auto text-center">
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
-            <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
-              <input type="hidden" name="_captcha" value="false">
-              <!-- Anti-bot measures -->
-              <div class="hidden">
-                <input type="text" name="website" tabindex="-1" autocomplete="off">
-                <input type="text" name="timestamp" value="" id="formTimestamp">
-              </div>
-              <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
-                <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
-              </div>
+            <form id="contactForm" action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-4">
+              <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+              <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+              <input type="hidden" id="formTimestamp" name="timestamp">
               <div class="relative">
                 <select name="subject" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30 appearance-none">
                   <option value="" disabled selected>Select a subject</option>
