--- a/index.html
+++ b/index.html
@@ -975,6 +975,26 @@
   </script>
 
   <script>
+    // Minimal form handling
+    document.getElementById('contactForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      const response = await fetch(this.action, {
+        method: 'POST',
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+      if (response.ok) {
+        this.reset();
+        grecaptcha.reset();
+        alert('Thank you for your interest! We\'ll review your information and get back to you within 24 hours with your free process analysis.');
+      }
+    });
+  </script>
+
+  <script>
     // Hours Counter
     function formatNumber(num) {
       // Split number into whole and decimal parts
